# learning_compilers

./: .gitignore  LICENSE  README.md  learning-compilers.cabal  notes.md
nix/modules/flake/: devshell.nix  haskell.nix
src/: Assemblygen.hs  Main.hs  Parse.hs
